Show text editor on launch lmao